AuthnContext class ref handling